fixed api generator naming issues
